# diyer-cutter

./: .gitignore  Cargo.toml  Embed.toml  README.md
.cargo/: config.toml
.devcontainer/: Cargo.toml  Dockerfile  devcontainer.json  postCreate.sh
docs/: planning.md
docs/KiCad/DIYer_Cutter/: #auto_saved_files#  DIYer_Cutter.bak  DIYer_Cutter.csv  DIYer_Cutter.kicad_prl  DIYer_Cutter.kicad_pro  DIYer_Cutter.kicad_sch  DIYer_Cutter.kicad_sym  DIYer_Cutter.xml  sym-lib-table
docs/uml/: statechart.puml  statechart_op.puml  statechart_prep.puml  statechart_top.puml
src/: lcd1602.rs  main.rs  microbit_allocator.rs  motors.rs  servo.rs  stepper.rs
src/i2c/: keypad.rs  lcd1602.rs  mod.rs
src/i2c_periphs/: keypad.rs  lcd1602.rs  mod.rs
tools/: setup.ps1
