[package]
name = "diyer-cutter"
version = "0.1.0"
authors = ["CJ McAllister <cjm571@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = { version = "0.3", features = ["print-defmt"] }
cortex-m-semihosting = "0.5.0"
nrf52833-hal = "0.16.0"

[[bin]]
name = "diyer-cutter"
test = false
bench = false

[features]
debug_keypad = []