[package]
name = "diyer-cutter"
version = "0.1.0"
authors = ["CJ McAllister <cjm571@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
cortex-m-rtic = "1.1.3"
panic-halt = "0.2.0"
rtt-target = { version = "0.3.1", features = ["cortex-m"] }
panic-rtt-target = { version = "0.1.2", features = ["cortex-m"] }
embedded-hal = "0.2.7"
nrf52833-hal = "0.15.0"
microbit-v2 = "0.13.0"
nb = "1.0.0"

[[bin]]
name = "diyer-cutter"
test = false
bench = false

[features]
debug_keypad = []